# Fuhrer-ai

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py
backend/core/: container.py  exceptions.py  logger.py  security.py  settings.py
backend/database/: __init__.py  engine.py  session.py
backend/tests/: test_main.py
kernel/: __init__.py  __init__.py1  version.py
kernel/config/: __init__.py  __init__.py1  environment.py  loader.py  settings.py  settings.py1
kernel/container/: __init__.py  container.py  lifetime.py  provider.py  provider.py1  registry.py  registry.py1  service.py
kernel/events/: __init__.py  bus.py  event.py  handler.py
kernel/exceptions/: __init__.py  base.py
kernel/logging/: __init__.py  logger.py  logger.py1
kernel/tests/: test_container.py  test_events.py
